Created bot functionality
Also added database, api connections and updated logging and settings

--- a/settings.json
+++ b/settings.json
@@ -4,5 +4,6 @@
     "Channel": "#<channel>",
     "Nickname": "<name>",
     "Authentication": "oauth:<auth>",
-    "Cooldown": 20
+    "Cooldown": 20,
+    "X-Access-Token": "<accessToken>"
 }
