Adding restarting adventures
Other changes:
- made api requests asyncronous.
- used a custom story with a custom prompt for new stories.
- restarting adventures is only for people with the right rank, or specific users.

--- a/settings.json
+++ b/settings.json
@@ -5,5 +5,11 @@
     "Nickname": "<name>",
     "Authentication": "oauth:<auth>",
     "Cooldown": 20,
-    "X-Access-Token": "<accessToken>"
+    "X-Access-Token": "<accessToken>",
+    "AllowedRanks": [
+        "broadcaster",
+        "moderator",
+        "vip"
+    ],
+    "AllowedUsers": []
 }
